--- a/src/app/shared/components/rating-modal/rating-modal.component.html
+++ b/src/app/shared/components/rating-modal/rating-modal.component.html
@@ -48,5 +48,5 @@
     </div>
 </div>
 <div class="modal-footer">
-    <button type="button" style="background-color:#553d67" class="btn" (click)="completeTour(rating)">Save</button>
+    <button type="button" style="background-color:#553d67" class="btn btn-sm text-white" (click)="completeTour(rating)">Save</button>
 </div>
