--- a/src/app/shared/components/timeline-page/timeline-page.component.html
+++ b/src/app/shared/components/timeline-page/timeline-page.component.html
@@ -66,7 +66,7 @@
                 </mdb-card-body>
             </mdb-card>
            <div class="mt-4 text-center">
-            <button type="button" class="btn btn-sm text-white dpurple">Back</button>
+            <button type="button" (click)="back()" class="btn btn-sm text-white dpurple">Back</button>
             <button type="button" (click)="open(rating)" [disabled]="getEndDate()"
              class="btn btn-sm text-white dpurple">Completed</button>
            </div>
