--- a/src/app/modules/home/top-deals/top-deals.component.html
+++ b/src/app/modules/home/top-deals/top-deals.component.html
@@ -35,7 +35,7 @@
                                                         <div class="card-text mt-0 pt-0 black-text">
                                                             <div>
                                                                 <p><i class="far fa-calendar-alt"></i> From: <b>{{deal.startDate | date: 'yyyy-mm-dd'}}</b> &nbsp;
-                                                                     To: <b>{{deal.endDate | date: 'yyyy-mm-dd'}}</b></p>
+                                                                     To: <b>{{deal.endDate | date: 'yyyy-MM-dd'}}</b></p>
                                                             </div>
                                                             <h5>In only Rs. <b>{{deal.price}}</b>/-</h5>
                                                         </div>
@@ -61,7 +61,7 @@
                                                 <hr class="px-3 py-0 ml-0" style="width:60px; border-top: 1px solid deeppink;">
                                                 <div class="card-text my-0 pt-0 black-text">
                                                     <div>
-                                                        <p><i class="far fa-calendar-alt"></i> From: <b>{{deal.startDate | date: 'yyyy-mm-dd'}}</b> &nbsp; To: <b>{{deal.endDate | date: 'yyyy-mm-dd'}}</b></p>
+                                                        <p><i class="far fa-calendar-alt"></i> From: <b>{{deal.startDate | date: 'yyyy-MM-dd'}}</b> &nbsp; To: <b>{{deal.endDate | date: 'yyyy-MM-dd'}}</b></p>
                                                     </div>
                                                     <h6>In only Rs. <b>{{deal.price}}</b>/-</h6>
                                                 </div>
